// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputElement > helpers > filterOptions > should filter options for "c" 1`] = `
Array [
  Object {
    "description": "The name of the contact.",
    "name": "contact",
  },
  Object {
    "description": "Run details after running a child flow",
    "name": "child",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "ch" 1`] = `
Array [
  Object {
    "description": "Run details after running a child flow",
    "name": "child",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "child" 1`] = `
Array [
  Object {
    "description": "Run details after running a child flow",
    "name": "child",
  },
  Object {
    "description": "The results for the child flow",
    "name": "child.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "child." 1`] = `
Array [
  Object {
    "description": "The results for the child flow",
    "name": "child.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "child.r" 1`] = `
Array [
  Object {
    "description": "The results for the child flow",
    "name": "child.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "child.re" 1`] = `
Array [
  Object {
    "description": "The results for the child flow",
    "name": "child.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "child.results" 1`] = `
Array [
  Object {
    "description": "The results for the child flow",
    "name": "child.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "co" 1`] = `
Array [
  Object {
    "description": "The name of the contact.",
    "name": "contact",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact" 1`] = `
Array [
  Object {
    "description": "The name of the contact.",
    "name": "contact",
  },
  Object {
    "description": "The name of the contact.",
    "name": "contact.name",
  },
  Object {
    "description": "The language code for the contact.",
    "name": "contact.language",
  },
  Object {
    "description": "Custom fields on the contact.",
    "name": "contact.fields",
  },
  Object {
    "description": "The groups for the contact.",
    "name": "contact.groups",
  },
  Object {
    "description": "URNs on the contact.",
    "name": "contact.urns",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact." 1`] = `
Array [
  Object {
    "description": "The name of the contact.",
    "name": "contact.name",
  },
  Object {
    "description": "The language code for the contact.",
    "name": "contact.language",
  },
  Object {
    "description": "Custom fields on the contact.",
    "name": "contact.fields",
  },
  Object {
    "description": "The groups for the contact.",
    "name": "contact.groups",
  },
  Object {
    "description": "URNs on the contact.",
    "name": "contact.urns",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.f" 1`] = `
Array [
  Object {
    "description": "Custom fields on the contact.",
    "name": "contact.fields",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.fi" 1`] = `
Array [
  Object {
    "description": "Custom fields on the contact.",
    "name": "contact.fields",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.fields" 1`] = `
Array [
  Object {
    "description": "Custom fields on the contact.",
    "name": "contact.fields",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.g" 1`] = `
Array [
  Object {
    "description": "The groups for the contact.",
    "name": "contact.groups",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.gr" 1`] = `
Array [
  Object {
    "description": "The groups for the contact.",
    "name": "contact.groups",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.groups" 1`] = `
Array [
  Object {
    "description": "The groups for the contact.",
    "name": "contact.groups",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.l" 1`] = `
Array [
  Object {
    "description": "The language code for the contact.",
    "name": "contact.language",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.la" 1`] = `
Array [
  Object {
    "description": "The language code for the contact.",
    "name": "contact.language",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.language" 1`] = `
Array [
  Object {
    "description": "The language code for the contact.",
    "name": "contact.language",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.n" 1`] = `
Array [
  Object {
    "description": "The name of the contact.",
    "name": "contact.name",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.na" 1`] = `
Array [
  Object {
    "description": "The name of the contact.",
    "name": "contact.name",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.name" 1`] = `
Array [
  Object {
    "description": "The name of the contact.",
    "name": "contact.name",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.u" 1`] = `
Array [
  Object {
    "description": "URNs on the contact.",
    "name": "contact.urns",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.ur" 1`] = `
Array [
  Object {
    "description": "URNs on the contact.",
    "name": "contact.urns",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.urns" 1`] = `
Array [
  Object {
    "description": "URNs on the contact.",
    "name": "contact.urns",
  },
  Object {
    "description": "The preferred telephone number for the contact.",
    "name": "contact.urns.tel",
  },
  Object {
    "description": "The preferred telegram id for the contact.",
    "name": "contact.urns.telegram",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.urns.t" 1`] = `
Array [
  Object {
    "description": "The preferred telephone number for the contact.",
    "name": "contact.urns.tel",
  },
  Object {
    "description": "The preferred telegram id for the contact.",
    "name": "contact.urns.telegram",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.urns.te" 1`] = `
Array [
  Object {
    "description": "The preferred telephone number for the contact.",
    "name": "contact.urns.tel",
  },
  Object {
    "description": "The preferred telegram id for the contact.",
    "name": "contact.urns.telegram",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.urns.tel" 1`] = `
Array [
  Object {
    "description": "The preferred telephone number for the contact.",
    "name": "contact.urns.tel",
  },
  Object {
    "description": "The preferred telegram id for the contact.",
    "name": "contact.urns.telegram",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "contact.urns.telegram" 1`] = `
Array [
  Object {
    "description": "The preferred telegram id for the contact.",
    "name": "contact.urns.telegram",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "i" 1`] = `
Array [
  Object {
    "description": "The last input from the contact if any.",
    "name": "input",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "in" 1`] = `
Array [
  Object {
    "description": "The last input from the contact if any.",
    "name": "input",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "input" 1`] = `
Array [
  Object {
    "description": "The last input from the contact if any.",
    "name": "input",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "input." 1`] = `Array []`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "p" 1`] = `
Array [
  Object {
    "description": "Run details if being called from a parent flow",
    "name": "parent",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "pa" 1`] = `
Array [
  Object {
    "description": "Run details if being called from a parent flow",
    "name": "parent",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "parent" 1`] = `
Array [
  Object {
    "description": "Run details if being called from a parent flow",
    "name": "parent",
  },
  Object {
    "description": "The results for the parent flow",
    "name": "parent.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "parent." 1`] = `
Array [
  Object {
    "description": "The results for the parent flow",
    "name": "parent.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "parent.r" 1`] = `
Array [
  Object {
    "description": "The results for the parent flow",
    "name": "parent.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "parent.re" 1`] = `
Array [
  Object {
    "description": "The results for the parent flow",
    "name": "parent.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "parent.results" 1`] = `
Array [
  Object {
    "description": "The results for the parent flow",
    "name": "parent.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "r" 1`] = `
Array [
  Object {
    "description": "Run details",
    "name": "run",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "ru" 1`] = `
Array [
  Object {
    "description": "Run details",
    "name": "run",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "run" 1`] = `
Array [
  Object {
    "description": "Run details",
    "name": "run",
  },
  Object {
    "description": "The contact in this run",
    "name": "run.contact",
  },
  Object {
    "description": "Results for the run",
    "name": "run.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "run." 1`] = `
Array [
  Object {
    "description": "The contact in this run",
    "name": "run.contact",
  },
  Object {
    "description": "Results for the run",
    "name": "run.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "run.c" 1`] = `
Array [
  Object {
    "description": "The contact in this run",
    "name": "run.contact",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "run.co" 1`] = `
Array [
  Object {
    "description": "The contact in this run",
    "name": "run.contact",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "run.contact" 1`] = `
Array [
  Object {
    "description": "The contact in this run",
    "name": "run.contact",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "run.r" 1`] = `
Array [
  Object {
    "description": "Results for the run",
    "name": "run.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "run.re" 1`] = `
Array [
  Object {
    "description": "Results for the run",
    "name": "run.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "run.results" 1`] = `
Array [
  Object {
    "description": "Results for the run",
    "name": "run.results",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "w" 1`] = `
Array [
  Object {
    "description": "The body of the webhook response",
    "name": "webhook",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "we" 1`] = `
Array [
  Object {
    "description": "The body of the webhook response",
    "name": "webhook",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook" 1`] = `
Array [
  Object {
    "description": "The body of the webhook response",
    "name": "webhook",
  },
  Object {
    "description": "The status of the webhook call",
    "name": "webhook.status",
  },
  Object {
    "description": "The status code returned from the webhook",
    "name": "webhook.status_code",
  },
  Object {
    "description": "The URL which was called",
    "name": "webhook.url",
  },
  Object {
    "description": "The body of the webhook response",
    "name": "webhook.body",
  },
  Object {
    "description": "The JSON parsed body of the response, can access subelements",
    "name": "webhook.json",
  },
  Object {
    "description": "The raw request of the webhook including headers",
    "name": "webhook.request",
  },
  Object {
    "description": "The raw response of the webhook including headers",
    "name": "webhook.response",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook." 1`] = `
Array [
  Object {
    "description": "The status of the webhook call",
    "name": "webhook.status",
  },
  Object {
    "description": "The status code returned from the webhook",
    "name": "webhook.status_code",
  },
  Object {
    "description": "The URL which was called",
    "name": "webhook.url",
  },
  Object {
    "description": "The body of the webhook response",
    "name": "webhook.body",
  },
  Object {
    "description": "The JSON parsed body of the response, can access subelements",
    "name": "webhook.json",
  },
  Object {
    "description": "The raw request of the webhook including headers",
    "name": "webhook.request",
  },
  Object {
    "description": "The raw response of the webhook including headers",
    "name": "webhook.response",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.b" 1`] = `
Array [
  Object {
    "description": "The body of the webhook response",
    "name": "webhook.body",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.bo" 1`] = `
Array [
  Object {
    "description": "The body of the webhook response",
    "name": "webhook.body",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.body" 1`] = `
Array [
  Object {
    "description": "The body of the webhook response",
    "name": "webhook.body",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.j" 1`] = `
Array [
  Object {
    "description": "The JSON parsed body of the response, can access subelements",
    "name": "webhook.json",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.js" 1`] = `
Array [
  Object {
    "description": "The JSON parsed body of the response, can access subelements",
    "name": "webhook.json",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.json" 1`] = `
Array [
  Object {
    "description": "The JSON parsed body of the response, can access subelements",
    "name": "webhook.json",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.r" 1`] = `
Array [
  Object {
    "description": "The raw request of the webhook including headers",
    "name": "webhook.request",
  },
  Object {
    "description": "The raw response of the webhook including headers",
    "name": "webhook.response",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.re" 1`] = `
Array [
  Object {
    "description": "The raw request of the webhook including headers",
    "name": "webhook.request",
  },
  Object {
    "description": "The raw response of the webhook including headers",
    "name": "webhook.response",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.request" 1`] = `
Array [
  Object {
    "description": "The raw request of the webhook including headers",
    "name": "webhook.request",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.response" 1`] = `
Array [
  Object {
    "description": "The raw response of the webhook including headers",
    "name": "webhook.response",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.s" 1`] = `
Array [
  Object {
    "description": "The status of the webhook call",
    "name": "webhook.status",
  },
  Object {
    "description": "The status code returned from the webhook",
    "name": "webhook.status_code",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.st" 1`] = `
Array [
  Object {
    "description": "The status of the webhook call",
    "name": "webhook.status",
  },
  Object {
    "description": "The status code returned from the webhook",
    "name": "webhook.status_code",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.status" 1`] = `
Array [
  Object {
    "description": "The status of the webhook call",
    "name": "webhook.status",
  },
  Object {
    "description": "The status code returned from the webhook",
    "name": "webhook.status_code",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.status_code" 1`] = `
Array [
  Object {
    "description": "The status code returned from the webhook",
    "name": "webhook.status_code",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.u" 1`] = `
Array [
  Object {
    "description": "The URL which was called",
    "name": "webhook.url",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.ur" 1`] = `
Array [
  Object {
    "description": "The URL which was called",
    "name": "webhook.url",
  },
]
`;

exports[`TextInputElement > helpers > filterOptions > should filter options for "webhook.url" 1`] = `
Array [
  Object {
    "description": "The URL which was called",
    "name": "webhook.url",
  },
]
`;

exports[`TextInputElement > helpers > getCharCount > should generate character count stats for msg of type "GSM: 7-bit" 1`] = `
Object {
  "characterCount": 24,
  "characterSet": "GSM",
  "maxLength": 160,
  "parts": Array [
    Object {
      "bytes": 24,
      "content": "GSM, regular 7-bit chars",
      "length": 24,
    },
  ],
  "remainingInPart": 136,
  "value": "GSM, regular 7-bit chars",
}
`;

exports[`TextInputElement > helpers > getCharCount > should generate character count stats for msg of type "GSM: escape" 1`] = `
Object {
  "characterCount": 27,
  "characterSet": "GSM",
  "maxLength": 160,
  "parts": Array [
    Object {
      "bytes": 35,
      "content": "GSM, escape chars: |^€{}[]~",
      "length": 27,
    },
  ],
  "remainingInPart": 125,
  "value": "GSM, escape chars: |^€{}[]~",
}
`;

exports[`TextInputElement > helpers > getCharCount > should generate character count stats for msg of type "Unicode + GSM escape" 1`] = `
Object {
  "characterCount": 38,
  "characterSet": "Unicode",
  "maxLength": 70,
  "parts": Array [
    Object {
      "bytes": 78,
      "content": "Unicode 💩 w/ GSM escape chars |^€{}[]~",
      "length": 38,
    },
  ],
  "remainingInPart": 31,
  "value": "Unicode 💩 w/ GSM escape chars |^€{}[]~",
}
`;

exports[`TextInputElement > helpers > getCharCount > should generate character count stats for msg of type "Unicode" 1`] = `
Object {
  "characterCount": 9,
  "characterSet": "Unicode",
  "maxLength": 70,
  "parts": Array [
    Object {
      "bytes": 20,
      "content": "Unicode 💩",
      "length": 9,
    },
  ],
  "remainingInPart": 60,
  "value": "Unicode 💩",
}
`;

exports[`TextInputElement > helpers > getCharCountStats > should return an object containing character count stats if passed Count.SMS enum 1`] = `
Object {
  "characterCount": 24,
  "characterSet": "GSM",
  "maxLength": 160,
  "parts": Array [
    Object {
      "bytes": 24,
      "content": "GSM, regular 7-bit chars",
      "length": 24,
    },
  ],
  "remainingInPart": 136,
  "value": "GSM, regular 7-bit chars",
}
`;

exports[`TextInputElement > render > should display count 1`] = `
<div
  className="tooltiprow"
  data-spec="tooltip-content"
>
  <span>
    The character-counter provides an estimate of the number of messages your response is expected to be split into by the carriers that send your messages. For example, the count
     
    <b>
      67/2
    </b>
     indicates that the current message will be split into 
    <b>
      2
    </b>
     messages and you have 
    <b>
      67
    </b>
     characters left until it will be split into 
    <b>
      3
    </b>
     messages.
  </span>
</div>
`;
